src/third_party/nasm/travis/test/br560575.stderr
./travis/test/br560575.asm:3: error: cannot apply SEG to a non-relocatable value
./travis/test/br560575.asm:4: error: cannot apply SEG to a non-relocatable value
./travis/test/br560575.asm:5: error: cannot apply SEG to a non-relocatable value
